<resources>

    <string name="app_name">Futball Stats Keeper</string>
    <string name="host_team">Host</string>
    <string name="visitor_team">Visitor</string>
    <string name="start_result">0</string>
    <string name="goal_button">GOOAAl!</string>
    <string name="fauls_stats">Faults</string>
    <string name="shots_stats">Shots</string>
    <string name="aditional_stats">Aditional stats:</string>
    <string name="reset_button">Reset</string>
</resources>
